# morpheus

./: .gitignore  CLAUDE.md  README.md  agent.py  chainlit_app.py  coding_agent.py  morpheus.py  notes_utils.py  pyproject.toml  pytest.ini  test_notes.py
.github/workflows/: test.yml
tests/: conftest.py
tests/fixtures/: test_data.py
tests/integration/: test_morpheus_bot.py
tests/unit/: test_database_tool.py  test_error_handling.py  test_notebook_tool.py
