[project]
name = "morpheus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "aiohttp>=3.11.13",
    "openai>=1.66.3",
    "pydantic-ai>=0.3.2",
    "pydantic-ai-slim[anthropic]>=0.3.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "slack-bolt>=1.22.0",
    "chainlit>=1.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]

test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-mock>=3.12.0",
]
